--- a/src/layouts/GenerateAddressLayout/components/CreatePassword/CreatePassword.scss
+++ b/src/layouts/GenerateAddressLayout/components/CreatePassword/CreatePassword.scss
@@ -100,16 +100,17 @@
     }
   }
   .switch {
-    align-items: center;
+    align-items: start;
     cursor: pointer;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     .link {
       color: $mew-green;
     }
 
     input {
       width: auto;
+      margin-top: 4px;
     }
 
     input[type='checkbox']::after {
